--- a/app/page.module.css
+++ b/app/page.module.css
@@ -8,6 +8,22 @@ header .logo {
     font-weight: 600;
 }
 
+header ul.nav {
+    float: right;
+    list-style: none;
+}
+
+header ul.nav li {
+    display: inline;
+    margin-left: 25px;
+    cursor: pointer;
+    transition: opacity 500ms ease;
+}
+
+header ul.nav li:hover {
+    opacity: 0.5;
+}
+
 header .presentation {
     margin: 50px 0;
     background: url('../public/mt.jpg');
@@ -40,4 +56,9 @@ header .presentation::before {
     font-size: 20px;
     font-weight: 200;
     color: #fff;
+}
+
+.footer {
+    margin-top: 100px;
+    text-align: center;
 }
